[package]
name = "http2amcp"
description = "HTTP to AMCP bridge"
authors = ["Martin Wacker <martas@imm.cz>"]
homepage = "https://github.com/aveco-automation/http2amcp"
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
clap = { version = "4.5.0", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.20"
telnet = "0.2.1"
